# alexa_bridge_admin

./: .coverage  .gitignore  CHANGELOG.md  DOCKS.md  DOCS.md  README.en.md  README.md  pyproject.toml  repository.yaml
alexa_bridge_admin/: Dockerfile  config.yaml
alexa_bridge_admin/rootfs/app/: main.py  requirements.txt
alexa_bridge_admin/rootfs/app/api/routes/: audit.py  backup.py  config.py  devices.py  ha.py  reload.py
alexa_bridge_admin/rootfs/app/assets/: alexa_bridge.py  alexa_bridge.yaml
alexa_bridge_admin/rootfs/app/frontend/: index.html
alexa_bridge_admin/rootfs/app/services/: config_service.py  reload_service.py
alexa_bridge_admin/rootfs/etc/s6-overlay/s6-rc.d/alexa-bridge-admin/: finish  run
dev/: alexa_bridge.yaml  docker-compose.dev.yml  run_dev.sh
dev/.pyscript/: .gitignore  alexa_bridge.py
dev/.pyscript/backups/: .gitignore
tests/integration/: test_bridge_flow.py
tests/unit/: test_api_routes.py  test_bridge.py  test_config_service.py  test_reload_service.py
