[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alexa-bridge-addon"
version = "0.1.3"
description = "Home Assistant add-on for AlexaBridge configuration"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "PyYAML==6.0.2",
  "requests==2.32.4",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "cryptography>=42.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
